seller dashboard changes, buyer dashboard changes, checkout flow changes

--- a/src/app/views/account/favorites/favorites.html
+++ b/src/app/views/account/favorites/favorites.html
@@ -22,7 +22,7 @@
 				</a>
 			</div>
 			<h4 class="box-title">
-				<i class="icon soap-icon-heart yellow-color"></i>{{pro.name}}
+				{{pro.name}}
 				<div class="col-xs-12 visible-xs action-btn-xs">
 					<a class="icon-right">
 						<i class="fa fa-trash"></i>&nbsp &nbsp &nbsp
