--- a/src/app/style/sass/_variables.scss
+++ b/src/app/style/sass/_variables.scss
@@ -178,5 +178,5 @@ $primary-orange-color: #FB4F14;
 $secondary-light-color: #B1BABF;
 
 $primary-button-color: $primary-orange-color; // #FA5013;
-$secondary-button-color: $secondary-light-color;
+$secondary-button-color: $dark-gray-color;
 $grey-button-color: $dark-gray-color;
