--- a/src/app/views/account/invoices/list/list.html
+++ b/src/app/views/account/invoices/list/list.html
@@ -14,28 +14,33 @@
 		</select>
 </div>
 <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 booking-history no-padding">
-	<div ng-repeat="inv in mdl.invoices" class="booking-info clearfix no-lpadding no-rpadding">
-		<h5 class="box-title col-lg-3 col-md-3 col-sm-3 col-xs-5 no-padding">
-			<i class="icon soap-icon-card yellow-color circle"></i>Invoice
-			<small>ID : {{inv.id}}</small>
-		</h5>
-		<h5 class="box-title col-lg-2 col-md-2 col-sm-2 col-xs-2 no-padding">
-			<i class="icon yellow-color circle"></i>{{inv.is_paid ? "Paid" : "Not Paid"}}
-		</h5>
-		<h5 class="box-title col-lg-1 col-md-1 col-sm-1 col-xs-4 no-padding">
-			<i class="icon yellow-color circle"></i>{{inv.is_approve ? "Approved" : "Approved"}}
-		</h5>
-		<h5 class="box-title col-lg-2 col-md-2 col-sm-2 col-xs-1 col-lg-offset-1  col-md-offset-1 no-padding col-sm-offset-1">
-			<i class="icon yellow-color circle"></i>${{inv.total}}
-		</h5>
-		<a class="pull-right" ng-click="invoicesMdl.pay(inv)">
-			<i class="fa fa-money"></i>
-		</a>
-		<a class="pull-right" ui-sref="main.account.invoices.view({id:inv.id})">
-			<i class="fa fa-eye"></i>&nbsp &nbsp &nbsp
-		</a>
-		<!-- <button class="btn all-btn status" process-indicator  ng-click="invoicesMdl.pay(inv)">Pay Now</button> -->
-		<!-- <button class="btn all-btn status" ui-sref="main.account.invoices.view({id:inv.id})">View Details</button> -->
-	</div>
+	<table class="table order-table">
+		<tbody>
+			<tr ng-repeat="inv in mdl.invoices">
+				<td>
+					<p class="heading-text no-margin">
+						<i class="icon soap-icon-card yellow-color circle"></i>&nbsp Invoice
+					</p>
+					<small>ID : {{inv.id}}</small>
+				</td>
+				<td class="heading-text">
+					Jan 28, 2015
+				</td>
+				<td class="heading-text">{{inv.is_paid ? "Paid" : "Not Paid"}}
+				</td>
+				<td class="heading-text">{{inv.is_approve ? "Approved" : "Approved"}}
+				</td>
+				<td class="heading-text">${{inv.total}}</td>
+				<td>
+					<!-- <a class="pull-right" ng-click="invoicesMdl.pay(inv)">
+						<i class="fa fa-money"></i>
+					</a> -->
+					<a ui-sref="main.account.invoices.view({id:inv.id})" class="pull-right btn all-btn primary-btn">
+						View
+					</a>
+				</td>
+			</tr>
+		</tbody>
+	</table>
 </div>
 
