--- a/src/app/views/home/home.html
+++ b/src/app/views/home/home.html
@@ -3,7 +3,7 @@
 </div>
 <!-- new landing header start -->
 <header scroll id="header" class="navbar-static-top style2">
-		<div class="topnav">
+	<div class="topnav">
 		<div class="container">
 			<ul class="quick-menu pull-right clearfix">
 				<li class="menu-item-has-children pointerhover">
@@ -47,7 +47,7 @@
 								</a>
 							</li>
 							<li class="not-user notification-li" ng-if="isLoggedIn()">
-								<a href="">
+								<a ui-sref="main.inquiries">
 									<i class="fa fa-envelope-o big-font hidden-xs"></i>
 									<span class="visible-xs">Messages</span>
 									<div class="notification hidden-xs">2</div>
