--- a/src/app/views/seller-account/equipments/list/list.html
+++ b/src/app/views/seller-account/equipments/list/list.html
@@ -19,15 +19,15 @@
 	</div>
 	<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 gray-area select-filter">
 		<form>
-				<label class="radio radio-inline">
+				<label class="radio radio-inline" ng-class="{'checked':listEquiMdl.filter=='all'}" ng-click="listEquiMdl.updateFilter('all')">
 					<input type="radio" name="filter" />
 					<span class="radio-label">All</span>
 				</label>
-				<label class="radio radio-inline">
+				<label class="radio radio-inline" ng-class="{'checked':listEquiMdl.filter=='rent'}" ng-click="listEquiMdl.updateFilter('rent')">
 					<input type="radio" name="filter" />
 					<span class="radio-label">On Rent</span>
 				</label>
-				<label class="radio radio-inline">
+				<label class="radio radio-inline" ng-class="{'checked':listEquiMdl.filter=='vacant'}" ng-click="listEquiMdl.updateFilter('vacant')">
 					<input type="radio" name="filter" />
 					<span class="radio-label">Vacant</span>
 				</label>
@@ -35,24 +35,16 @@
 	</div>
 	<div class="col-lg-12 col-md-12 col-sm-12 hidden-xs">
 		<table class="table equipments-table">
-			<thead>
-				<tr>
-					<th></th>
-					<th></th>
-					<th></th>
-					<th></th>
-				</tr>
-			</thead>
 			<tbody>
-				<tr>
+				<tr ng-repeat="pro in listEquiMdl.products">
 					<td>
 						<a href="" class="hover-effect popup-gallery">
 							<img src="" class="gray-area">
 						</a>
 					</td>
 					<td class="equip-desc">
-						<h3>Breaker</h3>
-						<p>Austin, Texas</p>
+						<h3>{{pro.name}}</h3>
+						<p>{{pro.location.city.name}},{{pro.location.state.name}}</p>
 						<p>ID: xxxxxxxx</p>
 					</td>
 					<td class="time-td">
@@ -62,78 +54,14 @@
 					<td class="text-right action-td">
 						<p>
 							<!-- <button class="btn all-btn primary-btn">View</button> -->
-							<a href="">
-								<i class="fa fa-eye"></i>
+							<a ui-sref="main.equiDetails({id:pro.id})">
+								<i class="fa fa-eye" ui-sref="main.equiDetails({id:pro.id})"></i>
 							</a>
-							<a ui-sref="main.sellerAccount.equipments.add">
-								<i class="fa fa-pencil-square-o"></i>
+							<a ng-click="edit(pro)">
+								<i class="fa fa-pencil-square-o" ng-click="edit(pro)"></i>
 							</a>
-							<a href="">
-								<i class="fa fa-archive"></i>
-							</a>
-						</p>
-						<!-- <a href="">Edit</a> -->
-						<!-- <a href="">Archive</a> -->
-					</td>
-				</tr>
-				<tr>
-					<td>
-						<a href="" class="hover-effect popup-gallery">
-							<img src="" class="gray-area">
-						</a>
-					</td>
-					<td class="equip-desc">
-						<h3>Breaker</h3>
-						<p>Austin, Texas</p>
-						<p>ID: xxxxxxxx</p>
-					</td>
-					<td class="time-td">
-						<h3 class="time-util">Time Utilization: 47%</h3>
-						<h3>Dolar Utilization: 82%</h3>
-					</td>
-					<td class="text-right action-td">
-						<p>
-							<!-- <button class="btn all-btn primary-btn">View</button> -->
-							<a href="">
-								<i class="fa fa-eye"></i>
-							</a>
-							<a ui-sref="main.sellerAccount.equipments.add">
-								<i class="fa fa-pencil-square-o"></i>
-							</a>
-							<a href="">
-								<i class="fa fa-archive"></i>
-							</a>
-						</p>
-						<!-- <a href="">Edit</a> -->
-						<!-- <a href="">Archive</a> -->
-					</td>
-				</tr>
-				<tr>
-					<td>
-						<a href="" class="hover-effect popup-gallery">
-							<img src="" class="gray-area">
-						</a>
-					</td>
-					<td class="equip-desc">
-						<h3>Breaker</h3>
-						<p>Austin, Texas</p>
-						<p>ID: xxxxxxxx</p>
-					</td>
-					<td class="time-td">
-						<h3 class="time-util">Time Utilization: 47%</h3>
-						<h3>Dolar Utilization: 82%</h3>
-					</td>
-					<td class="text-right action-td">
-						<p>
-							<!-- <button class="btn all-btn primary-btn">View</button> -->
-							<a href="">
-								<i class="fa fa-eye"></i>
-							</a>
-							<a ui-sref="main.sellerAccount.equipments.add">
-								<i class="fa fa-pencil-square-o"></i>
-							</a>
-							<a href="">
-								<i class="fa fa-archive"></i>
+							<a  ng-click="delete(pro)">
+								<i class="fa fa-archive" ng-click="delete(pro)"></i>
 							</a>
 						</p>
 						<!-- <a href="">Edit</a> -->
@@ -144,84 +72,6 @@
 		</table>
 	</div>
 	<div class="col-xs-12 visible-xs no-padding">
-		<article class="col-xs-12 mobile-cart seller-mobile-equip">
-				<figure>
-					<a href="#" title="" class="hover-effect pull-center"><img src="http://placehold.it/166x150" alt="" class="inline-block"></a>
-				</figure>
-				<div class="col-xs-12 no-padding devider"></div>
-				<div class="col-xs-12 no-padding details">
-					<h4 class="box-title bold-font" style="margin-bottom: 5px;">Breaker</h4>
-					<div class="col-xs-12 no-padding amenities">
-						<p class="no-margin">
-							Austin, Texas
-							<span class="pull-right">
-								ID: xxxxxxxx
-							</span>
-						</p>
-					</div>
-					<div class="col-xs-12 no-padding">
-						<p style="margin-bottom: 5px; margin-top: 5px;">
-							Time Utilization:
-							<span class="pull-right">47%</span>
-						</p>
-						<p style="margin-bottom: 5px; margin-top: 5px;">
-							Dolar Utilization:
-							<span class="pull-right">82%</span>
-						</p>
-					</div>
-					<div class="col-xs-12 devider"></div>
-					<div class="col-xs-12 no-padding action pull-center cart-action">
-						<a href="" class="pull-left">
-							<i class="fa fa-eye"></i>
-						</a>
-						<a ui-sref="main.sellerAccount.equipments.add" class="text">
-							<i class="fa fa-pencil-square-o"></i>
-						</a>
-						<a href="" class="pull-right">
-							<i class="fa fa-archive"></i>
-						</a>
-					</div>
-				</div>
-		</article>
-		<article class="col-xs-12 mobile-cart seller-mobile-equip">
-				<figure>
-					<a href="#" title="" class="hover-effect pull-center"><img src="http://placehold.it/166x150" alt="" class="inline-block"></a>
-				</figure>
-				<div class="col-xs-12 no-padding devider"></div>
-				<div class="col-xs-12 no-padding details">
-					<h4 class="box-title bold-font" style="margin-bottom: 5px;">Breaker</h4>
-					<div class="col-xs-12 no-padding amenities">
-						<p class="no-margin">
-							Austin, Texas
-							<span class="pull-right">
-								ID: xxxxxxxx
-							</span>
-						</p>
-					</div>
-					<div class="col-xs-12 no-padding">
-						<p style="margin-bottom: 5px; margin-top: 5px;">
-							Time Utilization:
-							<span class="pull-right">47%</span>
-						</p>
-						<p style="margin-bottom: 5px; margin-top: 5px;">
-							Dolar Utilization:
-							<span class="pull-right">82%</span>
-						</p>
-					</div>
-					<div class="col-xs-12 devider"></div>
-					<div class="col-xs-12 no-padding action pull-center cart-action">
-						<a href="" class="pull-left">
-							<i class="fa fa-eye"></i>
-						</a>
-						<a ui-sref="main.sellerAccount.equipments.add" class="text">
-							<i class="fa fa-pencil-square-o"></i>
-						</a>
-						<a href="" class="pull-right">
-							<i class="fa fa-archive"></i>
-						</a>
-					</div>
-				</div>
-		</article>
 		<article class="col-xs-12 mobile-cart seller-mobile-equip">
 				<figure>
 					<a href="#" title="" class="hover-effect pull-center"><img src="http://placehold.it/166x150" alt="" class="inline-block"></a>
