--- a/src/app/views/seller-account/inventory/list/list.html
+++ b/src/app/views/seller-account/inventory/list/list.html
@@ -20,34 +20,23 @@
 	<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 gray-area select-product">
 		<p>
 			Select Product: 
-			<select class="form-control">
-				<option>Abc</option>
-				<option>Def</option>
-				<option>Xyz</option>
-			</select>
+			<select name="select-product" ng-model="invMdl.equiId" class="form-control" ng-options="e.id as e.name for e in invMdl.equis">
+      </select>
 		</p>
 	</div>
 	<div class="col-lg-12 col-md-12 col-sm-12 hidden-xs">
 		<table class="table equipments-table">
-			<thead>
-				<tr>
-					<th></th>
-					<th></th>
-					<th></th>
-					<th></th>
-				</tr>
-			</thead>
 			<tbody>
-				<tr>
+				<tr ng-repeat="inv in mdl.inventories">
 					<td>
 						<a href="" class="hover-effect popup-gallery">
 							<img src="" class="gray-area">
 						</a>
 					</td>
 					<td class="equip-desc">
-						<h3>Breaker</h3>
+						<h3>{{inv.product.name}}</h3>
 						<p>Austin, Texas</p>
-						<p>ID: xxxxxxxx</p>
+						<p>ID: {{inv.id}}</p>
 					</td>
 					<td class="time-td pull-center vertically-middle">
 						<toggle-switch ng-click="valueChanged(inv)" ng-model="inv.is_active" on-label="Available" off-label="Not-Available"></toggle-switch>
@@ -58,69 +47,7 @@
 							<a href="">
 								<i class="fa fa-eye"></i>
 							</a>
-							<a ui-sref="main.sellerAccount.inventory.add">
-								<i class="fa fa-pencil-square-o"></i>
-							</a>
-							<a href="">
-								<i class="fa fa-archive"></i>
-							</a>
-						</p>
-						<!-- <a href="">Edit</a> -->
-						<!-- <a href="">Archive</a> -->
-					</td>
-				</tr>
-				<tr>
-					<td>
-						<a href="" class="hover-effect popup-gallery">
-							<img src="" class="gray-area">
-						</a>
-					</td>
-					<td class="equip-desc">
-						<h3>Breaker</h3>
-						<p>Austin, Texas</p>
-						<p>ID: xxxxxxxx</p>
-					</td>
-					<td class="time-td pull-center vertically-middle">
-						<toggle-switch ng-click="valueChanged(inv)" ng-model="inv.is_active" on-label="Available" off-label="Not-Available"></toggle-switch>
-					</td>
-					<td class="text-right action-td">
-						<p>
-							<!-- <button class="btn all-btn primary-btn">View</button> -->
-							<a href="">
-								<i class="fa fa-eye"></i>
-							</a>
-							<a ui-sref="main.sellerAccount.inventory.add">
-								<i class="fa fa-pencil-square-o"></i>
-							</a>
-							<a href="">
-								<i class="fa fa-archive"></i>
-							</a>
-						</p>
-						<!-- <a href="">Edit</a> -->
-						<!-- <a href="">Archive</a> -->
-					</td>
-				</tr>
-				<tr>
-					<td>
-						<a href="" class="hover-effect popup-gallery">
-							<img src="" class="gray-area">
-						</a>
-					</td>
-					<td class="equip-desc">
-						<h3>Breaker</h3>
-						<p>Austin, Texas</p>
-						<p>ID: xxxxxxxx</p>
-					</td>
-					<td class="time-td pull-center vertically-middle">
-						<toggle-switch ng-click="valueChanged(inv)" ng-model="inv.is_active" on-label="Available" off-label="Not-Available"></toggle-switch>
-					</td>
-					<td class="text-right action-td">
-						<p>
-							<!-- <button class="btn all-btn primary-btn">View</button> -->
-							<a href="">
-								<i class="fa fa-eye"></i>
-							</a>
-							<a ui-sref="main.sellerAccount.inventory.add">
+							<a ui-sref="main.sellerAccount.inventory.edit({id:inv.id})">
 								<i class="fa fa-pencil-square-o"></i>
 							</a>
 							<a href="">
@@ -135,70 +62,6 @@
 		</table>
 	</div>
 	<div class="col-xs-12 visible-xs no-padding">
-		<article class="col-xs-12 mobile-cart seller-mobile-equip">
-				<figure>
-					<a href="#" title="" class="hover-effect pull-center"><img src="http://placehold.it/166x150" alt="" class="inline-block"></a>
-				</figure>
-				<div class="col-xs-12 no-padding devider"></div>
-				<div class="col-xs-12 no-padding details">
-					<h4 class="box-title bold-font" style="margin-bottom: 5px;">Breaker</h4>
-					<div class="col-xs-12 no-padding amenities">
-						<p>
-							Austin, Texas
-							<span class="pull-right">
-								ID: xxxxxxxx
-							</span>
-						</p>
-					</div>
-					<div class="col-xs-12 no-padding">
-						<toggle-switch ng-click="valueChanged(inv)" ng-model="inv.is_active" on-label="Available" off-label="Not-Available" class="full-width"></toggle-switch>
-					</div>
-					<div class="col-xs-12 devider"></div>
-					<div class="col-xs-12 no-padding action pull-center cart-action">
-						<a href="" class="pull-left">
-							<i class="fa fa-eye"></i>
-						</a>
-						<a ui-sref="main.sellerAccount.inventory.add" class="text">
-							<i class="fa fa-pencil-square-o"></i>
-						</a>
-						<a href="" class="pull-right">
-							<i class="fa fa-archive"></i>
-						</a>
-					</div>
-				</div>
-		</article>
-		<article class="col-xs-12 mobile-cart seller-mobile-equip">
-				<figure>
-					<a href="#" title="" class="hover-effect pull-center"><img src="http://placehold.it/166x150" alt="" class="inline-block"></a>
-				</figure>
-				<div class="col-xs-12 no-padding devider"></div>
-				<div class="col-xs-12 no-padding details">
-					<h4 class="box-title bold-font" style="margin-bottom: 5px;">Breaker</h4>
-					<div class="col-xs-12 no-padding amenities">
-						<p>
-							Austin, Texas
-							<span class="pull-right">
-								ID: xxxxxxxx
-							</span>
-						</p>
-					</div>
-					<div class="col-xs-12 no-padding">
-						<toggle-switch ng-click="valueChanged(inv)" ng-model="inv.is_active" on-label="Available" off-label="Not-Available" class="full-width"></toggle-switch>
-					</div>
-					<div class="col-xs-12 devider"></div>
-					<div class="col-xs-12 no-padding action pull-center cart-action">
-						<a href="" class="pull-left">
-							<i class="fa fa-eye"></i>
-						</a>
-						<a ui-sref="main.sellerAccount.inventory.add" class="text">
-							<i class="fa fa-pencil-square-o"></i>
-						</a>
-						<a href="" class="pull-right">
-							<i class="fa fa-archive"></i>
-						</a>
-					</div>
-				</div>
-		</article>
 		<article class="col-xs-12 mobile-cart seller-mobile-equip">
 				<figure>
 					<a href="#" title="" class="hover-effect pull-center"><img src="http://placehold.it/166x150" alt="" class="inline-block"></a>
