--- a/src/app/views/seller-account/invoices/edit/edit.html
+++ b/src/app/views/seller-account/invoices/edit/edit.html
@@ -1,12 +1,16 @@
 <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 no-padding booking-information travelo-box invoice-details" style="margin-bottom: 0px;">
+	<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 invoices-edit-btn-col no-padding">
+		<button class="btn all-btn primary-btn pull-left" ui-sref="main.sellerAccount.invoices.list">Back to Invoice List</button>
+		<button class="btn all-btn primary-btn pull-right btn-right">Cancel</button>
+		<button class="btn all-btn primary-btn pull-right">Save Invoice</button>
+	</div>
 	<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 no-padding">
-		<h2>Edit Invoice</h2>
+		<hr />
 	</div>
-		<div class="col-lg-6 col-md-6 col-sm-6 col-xs-6 no-padding term-description">
-		<p class="hotel-color no-margin">Order number:</p>
-	</div>
-	<div class="col-lg-6 col-md-6 col-sm-6 col-xs-6">
-		<p class="no-margin">1234567890</p>
+		<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 no-padding term-description">
+		<p class="hotel-color no-margin">Order number: &nbsp
+			<span class="no-margin">1234567890</span>
+		</p>
 	</div>
 	<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 no-padding">
 		<hr />
@@ -73,10 +77,6 @@
 					$2209
 				</div>
 			</div>
-		</div>
-		<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 invoices-edit-btn-col">
-			<button class="btn all-btn primary-btn pull-left" ui-sref="main.sellerAccount.invoices.list">Back to Invoice List</button>
-			<button class="btn all-btn primary-btn pull-right">Save Invoice</button>
 		</div>
 	</div>
 </div>
