--- a/src/app/views/seller-account/invoices/list/list.html
+++ b/src/app/views/seller-account/invoices/list/list.html
@@ -14,7 +14,7 @@
 			</select>
 </div>
 <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 booking-history no-padding">
-		<div ng-repeat="item in mdl.items" class="booking-info clearfix no-lpadding no-rpadding">
+		<!-- <div ng-repeat="item in mdl.items" class="booking-info clearfix no-lpadding no-rpadding">
 			<h5 class="box-title col-lg-3 col-md-3 col-sm-3 col-xs-5 no-padding">
 				<i class="icon soap-icon-card yellow-color circle"></i>Invoice
 				<small>ID : {{item.id}}</small>
@@ -30,11 +30,38 @@
 			<h5 class="box-title col-lg-2 col-md-2 col-sm-2 col-xs-1 col-lg-offset-1  col-md-offset-1 no-padding col-sm-offset-1">
 				<i class="icon yellow-color circle"></i>${{item.total}}
 			</h5>
-			<!-- <button class="btn all-btn pull-right primary-btn" ui-sref="main.sellerAccount.invoices.view({id:item.id})">View Details</button> -->
 			<a class="pull-right clickable-icon" ui-sref="main.sellerAccount.invoices.view({id:item.id})">
 				<i class="fa fa-eye"></i>
 			</a>
-		</div>
+		</div> -->
+		<table class="table order-table">
+			<tbody>
+				<tr ng-repeat="item in mdl.items">
+					<td>
+						<p class="heading-text no-margin">
+							<i class="icon soap-icon-card yellow-color circle"></i>&nbsp Invoice
+						</p>
+						<small>ID : {{item.id}}</small>
+					</td>
+					<td class="heading-text">
+						Jan 28, 2015
+					</td>
+					<td class="heading-text">{{item.invoice.is_paid ? 'Paid' : 'Not Paid'}}
+					</td>
+					<td class="heading-text">{{item.is_approve ? 'Approved' : 'Not Approved'}}
+					</td>
+					<td class="heading-text">${{item.total}}</td>
+					<td>
+						<!-- <a class="pull-right" ng-click="invoicesMdl.pay(inv)">
+							<i class="fa fa-money"></i>
+						</a> -->
+						<a ui-sref="main.sellerAccount.invoices.view({id:item.id})" class="pull-right btn all-btn primary-btn">
+							View
+						</a>
+					</td>
+				</tr>
+			</tbody>
+		</table>
 </div>
 
 
