--- a/src/app/views/seller-account/invoices/view/view.html
+++ b/src/app/views/seller-account/invoices/view/view.html
@@ -1,12 +1,19 @@
 <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 no-padding booking-information travelo-box invoice-details" style="margin-bottom: 0px;">
+	<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 invoices-btn-col no-padding">
+		<button class="btn all-btn uppercase pull-left primary-btn" ui-sref="main.sellerAccount.invoices.list">
+			<i class="fa fa-chevron-left"></i> &nbsp
+			Back to Invoice List</button>
+		<button class="btn all-btn uppercase pull-right primary-btn">Download PDF</button>
+		<button style="margin-right:4px;" class="btn all-btn pull-right primary-btn" ui-sref="main.sellerAccount.invoices.edit({id:0})">Edit Invoice</button>
+	</div>
 	<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 no-padding">
-		<h2>Invoice Details</h2>
+		<hr />
 	</div>
-	<div class="col-lg-6 col-md-6 col-sm-6 col-xs-6 no-padding term-description">
-		<p class="hotel-color no-margin">Order number:</p>
-	</div>
-	<div class="col-lg-6 col-md-6 col-sm-6 col-xs-6">
-		<p class="no-margin">{{mdl.invoice.order.id}}</p>
+	<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 no-padding term-description">
+		<p class="heading-text no-margin">Order number: &nbsp
+			<span class="no-margin" ng-if="mdl.invoice.order.id">{{mdl.invoice.order.id}}</span>
+			<span class="no-margin" ng-if="!mdl.invoice.order.id">--</span>
+		</p>
 	</div>
 	<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 no-padding">
 		<hr />
@@ -72,11 +79,6 @@
 				${{mdl.item.total}}
 			</div>
 		</div>
-	</div>
-	<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 invoices-btn-col">
-		<button class="btn all-btn uppercase pull-left primary-btn" ui-sref="main.sellerAccount.invoices.list">Back to Invoice List</button>
-		<button class="btn all-btn uppercase pull-right primary-btn">Download PDF</button>
-		<button style="margin-right:4px;" class="btn all-btn pull-right primary-btn" ui-sref="main.sellerAccount.invoices.edit({id:0})">Edit Invoice</button>
 	</div>
 </div>
 
