--- a/src/app/views/seller-account/orders/list/list.html
+++ b/src/app/views/seller-account/orders/list/list.html
@@ -18,7 +18,7 @@
 	</div>
 
 	<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 booking-history no-padding">
-		<div ng-repeat="order in mdl.orders" class="booking-info clearfix">
+		<!-- <div ng-repeat="order in mdl.orders" class="booking-info clearfix">
 			<h4 class="box-title">
 				<i class="icon soap-icon-card yellow-color circle"></i>Order
 				<small>ID : {{order.id}}</small>
@@ -32,5 +32,30 @@
 			<a ui-sref="main.sellerAccount.orders.view({id:order.id})" class="pull-right">
 				<i class="fa fa-eye"></i>
 			</a>
-		</div>
+		</div> -->
+		<table class="table order-table">
+			<tbody>
+				<tr ng-repeat="order in mdl.orders">
+					<td>
+						<p class="heading-text no-margin">
+							<i class="icon soap-icon-card yellow-color circle"></i>&nbsp Order
+						</p>
+						<small>ID : {{order.id}}</small>
+					</td>
+					<td class="heading-text">
+						Jan 28, 2015
+					</td>
+					<td class="heading-text">{{order.items.length}} items
+					</td>
+					<td class="heading-text">${{order.subtotal}}
+					</td>
+					<td>
+						<a ui-sref="main.sellerAccount.orders.view({id:order.id})" class="pull-right btn all-btn primary-btn">
+							<!-- <i class="fa fa-eye" ui-sref="main.account.orders.view({id:order.id})"></i> -->
+							View
+						</a>
+					</td>
+				</tr>
+			</tbody>
+		</table>
 	</div>
