--- a/src/app/views/seller-account/orders/view/view.html
+++ b/src/app/views/seller-account/orders/view/view.html
@@ -1,25 +1,32 @@
 <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 no-padding booking-information travelo-box" style="margin-bottom: 0px;">
+	<div class="col-lg-5 col-md-5 col-sm-12 col-xs-12 no-padding">
+		<button class="btn all-btn primary-btn" ui-sref="main.sellerAccount.orders.list">
+			<i class="fa fa-chevron-left"></i> &nbsp
+			Back to Order List</button>
+	</div>
+	<div class="col-lg-7 col-md-7 col-sm-12 col-xs-12 no-padding orders-top-button">
+		<button class="btn pull-right btn-right print-button all-btn primary-btn">Cancel Order</button>
+		<button class="btn pull-right print-button all-btn primary-btn">Print Details</button>
+	</div>
+	<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 no-padding">
+		<hr />
+	</div>
 	<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 no-padding booking-confirmation clearfix">
-		<div class="col-lg-7 col-md-7 col-sm-12 col-xs-12 no-padding message">
+		<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 no-padding message">
 			<i class="soap-icon-clock icon circle"></i>
 			<h4 class="main-message">Your Recieved a new order !</h4>
 			<p>Please find your order details below and start processing it.</p>
-		</div>
-		<div class="col-lg-5 col-md-5 col-sm-12 col-xs-12 no-padding orders-top-button">
-			<button class="btn print-button all-btn primary-btn">Cancel Order</button>
-			<button class="btn print-button all-btn primary-btn">Print Details</button>
 		</div>
 	</div>
 	<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 no-padding">
 		<hr />
 	</div>
 	<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 no-padding">
-		<h2 class="heading-text order-head-bottom">Order Details</h2>
-		<div class="col-lg-6 col-md-6 col-sm-6 col-xs-6 no-padding term-description">
-			<p class="hotel-color no-margin">Order number:</p>
-		</div>
-		<div class="col-lg-6 col-md-6 col-sm-6 col-xs-6">
-			<p class="no-margin">{{mdl.order.id}}</p>
+		<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 no-padding term-description">
+			<p class="heading-text no-margin">Order number: &nbsp
+				<span class="no-margin" ng-if="mdl.order.id">{{mdl.order.id}}</span>
+				<span ng-if="!mdl.order.id">--</span>
+			</p>
 		</div>
 	</div>
 	<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 no-padding">
@@ -122,8 +129,5 @@
 				${{mdl.order.subtotal | number}}
 			</div>
 		</div>
-	</div>
-	<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-		<button class="btn pull-right all-btn primary-btn" ui-sref="main.sellerAccount.orders.list">Back to Order List</button>
 	</div>
 </div>
