--- a/src/app/style/sass/style.scss
+++ b/src/app/style/sass/style.scss
@@ -6654,3 +6654,24 @@ section {
     }
   }
 }
+
+.loaderDiv {
+  position: fixed;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  z-index: 1100;
+  background-color: rgba(0,0,0,.5) !important;
+  display: flex;
+  flex-wrap: wrap !important;
+  align-items: center !important;
+  justify-content: center !important;
+  opacity: 1 !important;
+  .ajax-loader {
+    position: static;
+    width: 10%;
+    margin-left: 0;
+    margin-top: 0;
+  }
+}
