--- a/src/app/views/seller-account/orders/list/list.html
+++ b/src/app/views/seller-account/orders/list/list.html
@@ -1,38 +1,36 @@
 
 	<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 seller-header search-col no-padding">
 		<h1 class="no-margin skin-color seller-heading-font">Orders Received</h1>
-		<div class="form-control search-div">
-			<input type="text" placeholder="Search">
-			<i class="fa fa-search"></i>
+		<div class="sb-search btn-right" ng-class="{'sb-search-open': filterOpen}">
+			<form>
+				<input date-range-picker class="form-control date-picker sb-search-input" placeholder="Select Dates" type="text" ng-model="date" ng-class="{'no-border': !filterOpen}" />
+				<!-- <input class="sb-search-submit form-control" type="submit" value=""ng-click="filterBar()"> -->
+				<span class="sb-icon-search filter-icon form-control"ng-click="filterBar()"></span>
+			</form>
 		</div>
-		Sort By &nbsp
+		<div id="sb-search" class="sb-search" ng-class="{'sb-search-open': searchOpen}">
+			<form>
+				<input class="sb-search-input form-control" placeholder="Search" type="text" value="" name="search" id="search" ng-class="{'no-border': !searchOpen}">
+				<input class="sb-search-submit form-control" type="submit" value=""ng-click="searchBar()">
+				<span class="sb-icon-search form-control"ng-click="searchBar()"></span>
+			</form>
+		</div>
+		<!-- <i class="fa fa-filter date-filter-icon" ng-click="filterBar()"></i>
+		<input date-range-picker class="form-control date-picker sb-search" type="text" ng-model="date" ng-class="{'sb-search-open': filterOpen}" /> -->
+		<!-- Sort By &nbsp
 		<select class="form-control sort-by">
 			<option>A-Z</option>
 			<option>Z-A</option>
 			<option>More-Less</option>
 			<option>Less-More</option>
 			<option>Currently Availbility</option>
-		</select>
+		</select> -->
 	</div>
-	<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 search-col">
+	<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 no-padding">
+		<hr />
 	</div>
 
-	<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 booking-history no-padding">
-		<!-- <div ng-repeat="order in mdl.orders" class="booking-info clearfix">
-			<h4 class="box-title">
-				<i class="icon soap-icon-card yellow-color circle"></i>Order
-				<small>ID : {{order.id}}</small>
-			</h4>
-			<h4 class="box-title col-lg-offset-1">
-				<i class="icon yellow-color circle"></i>{{order.items.length}} items
-			</h4>
-			<h4 class="box-title col-lg-offset-1">
-				<i class="icon yellow-color circle"></i>$ {{order.subtotal}}
-			</h4>
-			<a ui-sref="main.sellerAccount.orders.view({id:order.id})" class="pull-right">
-				<i class="fa fa-eye"></i>
-			</a>
-		</div> -->
+	<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 no-padding">
 		<table class="table order-table">
 			<tbody>
 				<tr ng-repeat="order in mdl.orders">
